# ardftsrc-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  PERFORMANCE.md  README.md
.github/workflows/: build-ardftsrc-rs.yml  rust.yml
ardftsrc/: Cargo.toml  README.md
ardftsrc-rs/: Cargo.toml
ardftsrc-rs/src/: main.rs
ardftsrc/benches/: ardftsrc_all.rs  ardftsrc_chunk_time.rs  ardftsrc_extreme_f32.rs  ardftsrc_extreme_f64.rs  ardftsrc_fast_f32.rs  ardftsrc_fast_f64.rs  ardftsrc_good_f32.rs  ardftsrc_good_f64.rs  ardftsrc_high_f32.rs  ardftsrc_high_f64.rs  ardftsrc_throughput.rs  rubato_sync.rs  rubato_sync_f64.rs
ardftsrc/examples/: convert_wavs.rs  convert_wavs_to_pcm_streaming.rs  rodio_adapter.rs  rodio_adapter_with_spans.rs
ardftsrc/src/: adapter_resampler.rs  ardftsrc.rs  ardftsrc_core.rs  batch.rs  beta_reg.rs  chunk.rs  chunk_adapter.rs  chunk_interleaved.rs  chunk_planar.rs  config.rs  core.rs  error.rs  interleaved_resampler.rs  lib.rs  lpc.rs  offthread.rs  planar_resampler.rs  planar_vecs.rs  realtime.rs  realtime_background.rs  rodio.rs  rodio_background.rs  streaming.rs  taper.rs  test_utils.rs  vec_of_vecs.rs
ardftsrc/tests/: golden_hashes.rs  wav_test.rs
benches/: ardftsrc_best.rs  ardftsrc_extreme_f32.rs  ardftsrc_extreme_f64.rs  ardftsrc_fast.rs  ardftsrc_fast_f32.rs  ardftsrc_fast_f64.rs  ardftsrc_good.rs  ardftsrc_good_f32.rs  ardftsrc_good_f64.rs  ardftsrc_high_f32.rs  ardftsrc_high_f64.rs  rubato_sync.rs  rubato_sync_f64.rs
examples/: convert_wavs.rs  convert_wavs_streaming.rs  convert_wavs_to_pcm_streaming.rs
script/: generate_golden_hashes.rs  run_ardftsrc_benches.sh  wav_resample.rs  wav_resample_rubato.rs
scripts/: generate_golden_hashes.rs  wav_resample.rs
src/: Untitled  ardftsrc.rs  ardftsrc_core.rs  config.rs  error.rs  lib.rs  lpc.rs
test_wavs/: golden_hashes.aarch64.json  golden_hashes.json
tests/: golden_copy.rs  golden_copy_core.rs  golden_hashes.rs  wav_test.rs
