[package]
name = "ardftsrc"
version = "0.0.1-alpha1"
edition = "2024"
description = "High-quality audio sample-rate conversion library and CLI."
license = "MIT OR Apache-2.0"
authors = ["Patrick Hayes <patrick.d.hayes@gmail.com>"]

[lib]
bench = false

[dependencies]
num-traits = "0.2"
realfft = "3.5.0"
thiserror = "2.0.18"
rayon = { version = "1", optional = true }
clap = { version = "4.5", features = ["derive"] }
wavers = "1.5.1"
mimalloc = "0.1"
i24 = "1.0.1"
flac-codec = { version = "1.3.2", features = ["rayon"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
dasp_signal = "0.11.0"
md5 = "0.8"
rubato = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wavers = "1.5.1"
mimalloc = "0.1"

[[bench]]
name = "ardftsrc_fast_f32"
harness = false

[[bench]]
name = "ardftsrc_fast_f64"
harness = false

[[bench]]
name = "ardftsrc_good_f32"
harness = false

[[bench]]
name = "ardftsrc_good_f64"
harness = false

[[bench]]
name = "ardftsrc_high_f32"
harness = false

[[bench]]
name = "ardftsrc_high_f64"
harness = false

[[bench]]
name = "ardftsrc_extreme_f32"
harness = false

[[bench]]
name = "ardftsrc_extreme_f64"
harness = false

[[bench]]
name = "rubato_sync"
harness = false

[[bench]]
name = "rubato_sync_f64"
harness = false

[[bin]]
name = "ardftsrc-rs"
path = "src/bin/ardftsrc-rs.rs"

[features]
rayon = ["dep:rayon"]
avx = ["realfft/avx"]
neon = ["realfft/neon"]
sse = ["realfft/sse"]
wasm_simd = ["realfft/wasm_simd"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
