[package]
name = "ardftsrc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
num-traits.workspace = true
realfft.workspace = true
thiserror.workspace = true
audioadapter = { workspace = true, optional = true }
audio-core = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rtrb = { version = "0.3.4", optional = true }
rodio = { version = "0.22", default-features = false, optional = true }

[dev-dependencies]
audioadapter-buffers.workspace = true
criterion.workspace = true
dasp_signal.workspace = true
md5.workspace = true
rubato.workspace = true
serde.workspace = true
serde_json.workspace = true
wavers.workspace = true
mimalloc.workspace = true
rodio = { version = "0.22", default-features = false, features = ["playback"] }

[features]
default = ["avx", "neon", "sse", "wasm_simd"]

# SIMD features (enabled by default)
avx = ["realfft/avx"]
neon = ["realfft/neon"]
sse = ["realfft/sse"]
wasm_simd = ["realfft/wasm_simd"]

# Optional features (disabled by default)
realtime = ["dep:rtrb"]
rodio = ["dep:rodio", "realtime"]
rayon = ["dep:rayon"]
audioadapter = ["dep:audio-core", "dep:audioadapter"]

[[bench]]
name = "ardftsrc_throughput"
harness = false

[[bench]]
name = "ardftsrc_chunk_time"
harness = false

[[bench]]
name = "rubato_sync"
harness = false

[[example]]
name = "rodio_adapter"
required-features = ["rodio"]

[[example]]
name = "rodio_adapter_with_spans"
required-features = ["rodio"]