[package]
name = "ardftsrc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
num-traits.workspace = true
realfft.workspace = true
thiserror.workspace = true
audioadapter = { workspace = true, optional = true }
audio-core = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rtrb = { version = "0.3.4", optional = true }
rodio = { version = "0.22", default-features = false, optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
audioadapter-buffers.workspace = true
criterion.workspace = true
dasp_signal.workspace = true
md5.workspace = true
rubato.workspace = true
serde.workspace = true
serde_json.workspace = true
wavers.workspace = true
mimalloc.workspace = true

[features]
default = ["avx", "neon", "sse", "wasm_simd"]

# SIMD features (enabled by default)
avx = ["realfft/avx"]
neon = ["realfft/neon"]
sse = ["realfft/sse"]
wasm_simd = ["realfft/wasm_simd"]

# Optional features (disabled by default)
rodio = ["dep:rodio"]
rayon = ["dep:rayon"]
audioadapter = ["dep:audio-core", "dep:audioadapter"]
tracing = ["dep:tracing"]

 # Rodio features (examples only)
rodio-playback= ["rodio/playback"]

[[bench]]
name = "ardftsrc_throughput"
harness = false

[[bench]]
name = "ardftsrc_chunk_time"
harness = false

[[bench]]
name = "rubato_sync"
harness = false

[[example]]
name = "rodio_adapter"
required-features = ["rodio-playback", "tracing"]

[[example]]
name = "rodio_adapter_with_spans"
required-features = ["rodio-playback", "tracing"]

[package.metadata.docs.rs]
features = ["rodio", "realtime"]